--- a/evolutionary.html
+++ b/evolutionary.html
@@ -179,7 +179,8 @@
 <h3>Discussion</h3>
 <p>Karl Sims used GP for his genetic images, and for his evolving virtual creaturs.</p>
 <p>Jurgen Schmidhuber proposed using GP to evolve GP (Meta-GP), since things like chromosomes, crossover etc. are themselves phenomena that have evolved. </p>
-<p><a href="http://dces.essex.ac.uk/staff/rpoli/gp-field-guide/A_Field_Guide_to_Genetic_Programming.pdf">A field guide to GP</a></p>
+<p><a href="http://dces.essex.ac.uk/staff/rpoli/gp-field-guide/A_Field_Guide_to_Genetic_Programming.pdf">A field guide to GP</a>
+<a href="http://www.geneticalgorithms.com/Tutorial/index.html">See also this tutorial</a></p>
 <p><a href="http://www.pawfal.org/Software/fastbreeder/">An example for audio</a></p>
 <hr>
 <h2>Discussion examples</h2>
