--- a/evolutionary.html
+++ b/evolutionary.html
@@ -180,12 +180,13 @@
 <p>Karl Sims used GP for his genetic images, and for his evolving virtual creaturs.</p>
 <p>Jurgen Schmidhuber proposed using GP to evolve GP (Meta-GP), since things like chromosomes, crossover etc. are themselves phenomena that have evolved. </p>
 <p><a href="http://dces.essex.ac.uk/staff/rpoli/gp-field-guide/A_Field_Guide_to_Genetic_Programming.pdf">A field guide to GP</a>
-<a href="http://www.geneticalgorithms.com/Tutorial/index.html">See also this tutorial</a></p>
+<a href="http://www.cs.montana.edu/~bwall/cs580/introduction_to_gp.pdf">An overview paper</a>
+<a href="http://www.geneticalgorithms.com/Tutorial/index.html">Very short tutorial</a></p>
 <p><a href="http://www.pawfal.org/Software/fastbreeder/">An example for audio</a></p>
 <hr>
 <h2>Discussion examples</h2>
-<p><img src="http://www.karlsims.com/papers/ksf11.gif" alt="Karl Sims">
-See <a href="http://www.karlsims.com/genetic-images.html">Karl Sims&#39; Genetic Images</a>.
+<p><img src="http://www.karlsims.com/papers/ksf11.gif" alt="Karl Sims"></p>
+<p>See <a href="http://www.karlsims.com/genetic-images.html">Karl Sims&#39; Genetic Images</a>.
 <a href="http://www.karlsims.com/papers/siggraph91.html">1991 Siggraph Paper</a></p>
 <p>Scott Draves, “Evolution and Collective Intelligence of the Electric Sheep,” The Art of Artificial Evolution, 2008.</p>
 <p><a href="http://boxcar2d.com/">Evolving 2D cars</a></p>
