--- a/evolutionary.html
+++ b/evolutionary.html
@@ -191,6 +191,7 @@
 <p>Scott Draves, “Evolution and Collective Intelligence of the Electric Sheep,” The Art of Artificial Evolution, 2008.</p>
 <p><a href="http://boxcar2d.com/">Evolving 2D cars</a></p>
 <p><a href="https://www.youtube.com/watch?feature=player_embedded&amp;v=z9ptOeByLA4">Evolving soft robots</a></p>
+<p>An excellent discussion of <a href="http://www.youtube.com/watch?v=50-d_J0hKz0">the genetic algorithm in art and its relation to Deleuze, by Manuel Delanda</a></p>
 </div>
 	
 	<div class="footer">
