--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 		
 	</div>
 	<div class="section"><h1>GCT753: Topics in Computational Design (Artificial Natures)</h1>
-<p>KAIST GSCT Spring 2013<br>Instructor: Dr. Graham Wakefield (<a href="http://www.grahamwakefield.net">grrrwaaa@gmail.com</a>)<br>Hours: Tue/Thu 10:30 - 12:00<br>Location: N25 3239<br>Office hours: Wed 11am-12pm, 2pm-3pm, N25 3228
-Language: English<br>Credit: 3<br>Web: <a href="http://grrrwaaa.github.com/gct753/">http://grrrwaaa.github.com/gct753/</a></p>
+<p>KAIST GSCT Spring 2013 / Spring 2014<br>Instructor: Dr. Graham Wakefield (<a href="http://www.grahamwakefield.net">grrrwaaa@gmail.com</a>)<br>TA: Sunga Jang<br>Hours: Tue/Thu 2.30pm - 4pm
+Location: N25 3239<br>Language: English<br>Credit: 3<br>Web: <a href="http://grrrwaaa.github.com/gct753/">http://grrrwaaa.github.com/gct753/</a></p>
 <h2>Overview</h2>
 <p>How can we create cultural artifacts (art, architecture, design, service) that are as rich, adaptive, and fascinating as nature? Media computation is often presented in terms of isolated and narrow problem-solving tasks, but the culture technology of tomorrow is increasingly connected, persistent, interactive, and open-ended. How can we create media systems that respond continuously and creatively to an ever-changing environment?</p>
 <p>From its origins computing has been inspired by nature, including aspects of intelligence, pattern formation, self-construction and reproduction, autonomy and collective behavior. This course introduces the key conceptual frameworks and techniques of bio-inspired computation and their applications in artifacts of cultural technology, particularly for interactive and generative media arts. The course however most strongly emphasizes practice: during the course, creative applications are examined and implemented in interactive audiovisual media. The aim is not only to develop understanding and expertise, but also to look ahead toward the artificial/natural/cultural environments of tomorrow.</p>
@@ -118,6 +118,7 @@ Implementations: stigmergy, pheromone trails. </p>
 <p><strong>Readings:</strong> Selected readings from the course books. Original texts (Fontana et al.). </p>
 <h3>Weeks 14+</h3>
 <p>Project development labs, final project presentation &amp; critique.</p>
+<p><a href="http://www.flickr.com/photos/idogu/167497705/"><img src="http://24.media.tumblr.com/ed9e8856194f3d0d9e3211afe0cf2f27/tumblr_miff0wyJ921rpcrx8o1_500.jpg" alt="urban jungle"></a></p>
 </div>
 	
 	<div class="footer">
