--- a/js.life.html
+++ b/js.life.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<script src="al.js"></script>
+<script src="http://grrrwaaa.github.io/gct753/al.min.js"></script>
 <style>
 body {
 	background: #eee;
@@ -13,9 +13,10 @@ body {
 </style>
 </head>
 <body>
-<canvas id="canvas1" width=512 height=256></canvas>
 <script>
-al.init("canvas1");
+al.init();
+
+/// put your code here /////////////////////////////////////////////////////////
 
 var w = 256, h = 128;
 var game = new field2D(w, h);
@@ -79,6 +80,8 @@ function update() {
 function draw() {
 	game.draw()
 }
+
+/// end of user code ///////////////////////////////////////////////////////////
 
 al.start();
 </script>
