--- a/cellular.html
+++ b/cellular.html
@@ -99,6 +99,7 @@
 <blockquote>
 <p>This technique is called <em>double-buffering</em>, and is widely used in software systems where a parallel process interacts with a serial machine. It is used to render graphics to the screen, for example.</p>
 </blockquote>
+<p><a href="js.life.html">Here is a version of the Game of Life CA using JavaScript</a></p>
 <h2>Variations</h2>
 <h3>Non-homogenous CA</h3>
 <p>The rule is not the same for all cells / for all time steps. Spatial non-homogeneity can be interesting to simulate different geographies (such as boundaries). Temporal non-homogeneity can be used to perform a sequence of different filters.</p>
