--- a/cellular.html
+++ b/cellular.html
@@ -180,13 +180,9 @@
 <h1>Assignment 1: Cellular Systems</h1>
 <p>The first assignment is to construct a new cellular system. You can start from one of the existing systems we have looked at and modify it, or design and create a new one to explore an idea you have; you can look through some of the different <em>variations on cellular systems</em> above and try to implement one. You might spend roughly a third of your time choosing what to try and designing, a third actually implementing it, and a third exploring it for interesting parameters, initial conditions, rule variations etc. If you end up with more than one system that is interesting, you can submit them all. </p>
 <p>If you had an idea that seemed interesting but was difficult to implement or did not lead to interesting results, submit that too (with an explanation of why you think it did not work or did not do what you expected); this is just as important a part of research (akin to disproving a hypothesis in science).</p>
-<p>Document your work using comments in the code. Note that in Lua, you can write long multi-line comments like this:</p>
-<pre><code class="lang-lua"><span class="comment">--[[
-This is a long comment
-that runs over
-several lines
---]]</span></code></pre>
-<p>At the top of your code, there should be a long comment including:</p>
+<p>You can use any programming language that you prefer. However if you do not use the Lua or JavaScript frameworks provided in the class, you will need to also submit a video along with the code (in case we are unable to make it run on our machines). </p>
+<p>Regardless of the language used, you must document your work using comments in the code. </p>
+<p>At the top of your code, there should be comments including:</p>
 <ul>
 <li>Your <strong>name</strong></li>
 <li>The <strong>date</strong></li>
@@ -197,7 +193,7 @@ several lines
 <li>Ideas for possible <strong>future extensions</strong> of the project.</li>
 </ul>
 <p>Please also comment all the important operations in the code. Please also try to use helpful variable names, e.g. <code>width</code> is more communicative than <code>var3</code>.</p>
-<p>Send your final project as one (or more) Lua script(s) to my email address, on or before <strong>Sunday 31 March</strong>. </p>
+<p>Send your final project code to the TA, on or before <strong>Friday 28 March</strong>.  </p>
 <p>Your assignment will be evaluted by these criteria:</p>
 <ul>
 <li><strong>Technical completeness</strong> (33%). If it works, how well it works (efficiency, accuracy). Also how clearly the code is structured and commented. Even if it doesn&#39;t work, how well it was conceived and implemented. </li>
