--- a/index.html
+++ b/index.html
@@ -1,39 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset='utf-8'>
-<title>Index</title>
-    
-<link href="css/site.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="css/highlight.default.css" media="screen" rel="stylesheet" type="text/css" />
-  
-<script src="js/jquery.js"></script>
-<script src="js/socket.io.js"></script>
-<script src="js/main.js" type="text/javascript"></script>
-
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
-</head>
-<body>
-<div id="wrapper">
-	
-	<div class="header">
-		<h1>GCT 753</h1>
-		<a href="index.html">Overview</a><br/>
-		<a href="software.html">Software</a><br/>
-		<a href="lua.html">Lua Tutorial</a><br/>
-		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
-		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
-		<br>
-		<a href="introduction.html">Themes</a><br/>
-		<a href="artificial_life.html">Artificial Life</a><br/>
-		<a href="generative_art.html">Generative Art</a><br/>
-		<a href="cellular.html">Cellular Systems</a><br/>
-		<a href="agent.html">Agent Systems</a><br/>
-		<a href="symbol.html">Symbol Systems</a><br/>
-		<a href="evolutionary.html">Evolutionary Systems</a><br/>
-		
-	</div>
-	<div class="section"><h1>GCT753: Topics in Computational Design (Artificial Natures)</h1>
+<h1>GCT753: Topics in Computational Design (Artificial Natures)</h1>
 <p>KAIST GSCT Spring 2013 / Spring 2014<br>Instructor: Dr. Graham Wakefield (<a href="http://www.grahamwakefield.net">grrrwaaa@gmail.com</a>)<br>TA: Sunga Jang<br>Hours: Tue/Thu 2.30pm - 4pm
 Location: N25 3239<br>Language: English<br>Credit: 3<br>Web: <a href="http://grrrwaaa.github.com/gct753/">http://grrrwaaa.github.com/gct753/</a></p>
 <h2>Overview</h2>
@@ -119,12 +84,3 @@ Implementations: stigmergy, pheromone trails. </p>
 <h3>Weeks 14+</h3>
 <p>Project development labs, final project presentation &amp; critique.</p>
 <p><a href="http://www.flickr.com/photos/idogu/167497705/"><img src="http://24.media.tumblr.com/ed9e8856194f3d0d9e3211afe0cf2f27/tumblr_miff0wyJ921rpcrx8o1_500.jpg" alt="urban jungle"></a></p>
-</div>
-	
-	<div class="footer">
-	<img src="img/snake6_small.jpg" alt="Artificial Natures"><br/>
-	Graham Wakefield, 2013</div>
-	
-</div>
-</body>
-</html>
