--- a/introduction.html
+++ b/introduction.html
@@ -1,39 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset='utf-8'>
-<title>Themes</title>
-    
-<link href="css/site.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="css/highlight.default.css" media="screen" rel="stylesheet" type="text/css" />
-  
-<script src="js/jquery.js"></script>
-<script src="js/socket.io.js"></script>
-<script src="js/main.js" type="text/javascript"></script>
-
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
-</head>
-<body>
-<div id="wrapper">
-	
-	<div class="header">
-		<h1>GCT 753</h1>
-		<a href="index.html">Overview</a><br/>
-		<a href="software.html">Software</a><br/>
-		<a href="lua.html">Lua Tutorial</a><br/>
-		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
-		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
-		<br>
-		<a href="introduction.html">Themes</a><br/>
-		<a href="artificial_life.html">Artificial Life</a><br/>
-		<a href="generative_art.html">Generative Art</a><br/>
-		<a href="cellular.html">Cellular Systems</a><br/>
-		<a href="agent.html">Agent Systems</a><br/>
-		<a href="symbol.html">Symbol Systems</a><br/>
-		<a href="evolutionary.html">Evolutionary Systems</a><br/>
-		
-	</div>
-	<div class="section"><h1>Themes</h1>
+<h1>Themes</h1>
 <p>The subject of this course is interdisciplinary: involving themes from computer science, cybernetics, theoretical biology, complex systems, philosophy, art &amp; music, architecture &amp; design, ... </p>
 <p>The most closely relevant topics include biologically inspired computing, and its roots in Artificial Life, in conjunction with generative arts and design. We will begin by investigating some of these themes individually and in parallel, allowing them to naturally cross over and mutate into new streams of natural and artificial creativity. </p>
 <blockquote>
@@ -55,12 +20,3 @@
 <p><a href="http://www.csse.monash.edu.au/~jonmc/research/Papers/TenQuestionsLJ-Preprint.pdf">Ten Questions Concerning Generative Computer Art. Jon McCormack, Oliver Bown,. Alan Dorin, Jonathan McCabe,. Gordon Monro and Mitchell Whitelaw. 2012</a></p>
 <p><a href="http://simonpenny.net/texts/Resources/a_life.pdf">Artificial Life -- a Primer. Simon Penny, 2009</a></p>
 <p><a href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=21&amp;ved=0CC8QFjAAOBQ&amp;url=http%3A%2F%2Fciteseerx.ist.psu.edu%2Fviewdoc%2Fdownload%3Fdoi%3D10.1.1.70.1101%26rep%3Drep1%26type%3Dpdf&amp;ei=p-U3UZqBI43ckgWg2YCwAQ&amp;usg=AFQjCNHDG_pHBeHBKPtfIZZvXu6HDeHlhw&amp;bvm=bv.43287494,d.dGI">On Biologically Inspired Computation “a.k.a. The Field”. Jason Brownlee, 2005.</a></p>
-</div>
-	
-	<div class="footer">
-	<img src="img/snake6_small.jpg" alt="Artificial Natures"><br/>
-	Graham Wakefield, 2013</div>
-	
-</div>
-</body>
-</html>
