--- a/lua.html
+++ b/lua.html
@@ -1,39 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset='utf-8'>
-<title>Lua</title>
-    
-<link href="css/site.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="css/highlight.default.css" media="screen" rel="stylesheet" type="text/css" />
-  
-<script src="js/jquery.js"></script>
-<script src="js/socket.io.js"></script>
-<script src="js/main.js" type="text/javascript"></script>
-
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
-</head>
-<body>
-<div id="wrapper">
-	
-	<div class="header">
-		<h1>GCT 753</h1>
-		<a href="index.html">Overview</a><br/>
-		<a href="software.html">Software</a><br/>
-		<a href="lua.html">Lua Tutorial</a><br/>
-		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
-		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
-		<br>
-		<a href="introduction.html">Themes</a><br/>
-		<a href="artificial_life.html">Artificial Life</a><br/>
-		<a href="generative_art.html">Generative Art</a><br/>
-		<a href="cellular.html">Cellular Systems</a><br/>
-		<a href="agent.html">Agent Systems</a><br/>
-		<a href="symbol.html">Symbol Systems</a><br/>
-		<a href="evolutionary.html">Evolutionary Systems</a><br/>
-		
-	</div>
-	<div class="section"><h1>Lua 5.1 quick tutorial</h1>
+<h1>Lua 5.1 quick tutorial</h1>
 <p>Commonly compared to: JavaScript, Ruby, Python, Scheme. Notable characteristics:</p>
 <ul>
 <li>Fast (used widely for game engines). <a href="www.luajit.org">LuaJIT</a> can approach and sometimes exceed C. </li>
@@ -302,12 +267,3 @@ c1()  <span class="comment">-- prints: 4</span></code></pre>
 <p><a href="http://www.lua.org/manual/5.1">Reference manual</a>; bookmark the <a href="http://www.lua.org/manual/5.1/index.html#index">contents</a>.</p>
 <p><em>Excellent</em> text-book: <a href="http://www.lua.org/docs.html#books">Programming in Lua (second edition)</a>
 <img src="http://www.lua.org/images/pil2.jpg" alt="PIL"></p>
-</div>
-	
-	<div class="footer">
-	<img src="img/snake6_small.jpg" alt="Artificial Natures"><br/>
-	Graham Wakefield, 2013</div>
-	
-</div>
-</body>
-</html>
