--- a/symbol.html
+++ b/symbol.html
@@ -1,39 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset='utf-8'>
-<title>Symbol systems</title>
-    
-<link href="css/site.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="css/highlight.default.css" media="screen" rel="stylesheet" type="text/css" />
-  
-<script src="js/jquery.js"></script>
-<script src="js/socket.io.js"></script>
-<script src="js/main.js" type="text/javascript"></script>
-
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
-</head>
-<body>
-<div id="wrapper">
-	
-	<div class="header">
-		<h1>GCT 753</h1>
-		<a href="index.html">Overview</a><br/>
-		<a href="software.html">Software</a><br/>
-		<a href="lua.html">Lua Tutorial</a><br/>
-		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
-		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
-		<br>
-		<a href="introduction.html">Themes</a><br/>
-		<a href="artificial_life.html">Artificial Life</a><br/>
-		<a href="generative_art.html">Generative Art</a><br/>
-		<a href="cellular.html">Cellular Systems</a><br/>
-		<a href="agent.html">Agent Systems</a><br/>
-		<a href="symbol.html">Symbol Systems</a><br/>
-		<a href="evolutionary.html">Evolutionary Systems</a><br/>
-		
-	</div>
-	<div class="section"><h1>Symbol systems</h1>
+<h1>Symbol systems</h1>
 <h2>Development and L-systems</h2>
 <p>The structure of a multi-cellular organisms develops in a gradual process from a single fertilized cell (the <em>zygote</em>) through progressive steps of cell duplication and specialization in a process called <em>development</em>; an active area of scientific research today. We know that each cell responds to chemical signals from its neighbors and other environmental conditions in order to know how to <em>differentiate</em> (to become a specific kind of cell in the body), according to the processes of the genome. The zygote does not contain a blueprint for the final organism, simply genotypic instructions for responding to environmental stimuli, which happen (in most cases) to produce the fully developed phenotype. </p>
 <p>A compact developmental representation can result in a more complex developed organism by relying on the self-organizing tendencies of the chemical substrate (such as the chemical pattern formation we saw with reaction-diffusion systems), the creative re-use of instructions (leading to the <em>modularity</em> and <em>symmetry</em> widely found in biology), and careful control over the ordering, when and for how long particular instructions operate (<em>heterochrony</em>). Development is clearly <em>parallel</em>, <em>decentralized</em>, granting some <em>robustness</em>, and yet it is also <em>context dependent</em>. It is also <em>self-limiting</em>, such that most developmental processes halt after the embryonic phase (though some may continue through the organism&#39;s lifetime, such as the <em>regeneration</em> of lost limbs).</p>
@@ -129,12 +94,3 @@
 <p>Since at least the early 1980&#39;s people have enjoyed creating virtual machines to explore the possibility of programs competing for control of the virtual machine processors and memory (see <a href="http://en.wikipedia.org/wiki/Core_War">Core War</a>). Ecologist Tom Ray was inspired to create a virtual machine in which the programs can evolve and modify each other, and found behaviors of symbiosis and parasitism. <a href="http://www.youtube.com/watch?v=Wl5rRGVD0QI">Documentary video</a></p>
 <p>Although byte-code systems are older, it has also been suggested that they are also a form of artificial chemistry, in which organisms are molecules (structured as binary sequences). </p>
 <p>Virus and anti-virus systems have been modeled in these terms, although they also draw upon theories of immune systems.</p>
-</div>
-	
-	<div class="footer">
-	<img src="img/snake6_small.jpg" alt="Artificial Natures"><br/>
-	Graham Wakefield, 2013</div>
-	
-</div>
-</body>
-</html>
