--- a/cellular.html
+++ b/cellular.html
@@ -1,4 +1,39 @@
-<h1>Cellular systems and lattice models</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset='utf-8'>
+<title>Cellular systems and lattice models</title>
+    
+<link href="css/site.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="css/highlight.default.css" media="screen" rel="stylesheet" type="text/css" />
+  
+<script src="js/jquery.js"></script>
+<script src="js/socket.io.js"></script>
+<script src="js/main.js" type="text/javascript"></script>
+
+<link rel="icon" type="image/x-icon" href="favicon.ico" />
+</head>
+<body>
+<div id="wrapper">
+	
+	<div class="header">
+		<h1>GCT 753</h1>
+		<a href="index.html">Overview</a><br/>
+		<a href="software.html">Software</a><br/>
+		<a href="lua.html">Lua Tutorial</a><br/>
+		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
+		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
+		<br>
+		<a href="introduction.html">Themes</a><br/>
+		<a href="artificial_life.html">Artificial Life</a><br/>
+		<a href="generative_art.html">Generative Art</a><br/>
+		<a href="cellular.html">Cellular Systems</a><br/>
+		<a href="agent.html">Agent Systems</a><br/>
+		<a href="symbol.html">Symbol Systems</a><br/>
+		<a href="evolutionary.html">Evolutionary Systems</a><br/>
+		
+	</div>
+	<div class="section"><h1>Cellular systems and lattice models</h1>
 <p>Provides an interesting continuum between non-living (such as molecules in crystal and metalline structures) and living (such as cells of a multi-cellular organism). The main difference is that, although both begin with more or less &#39;the same program&#39;, in living material the individual behavior of each cell specializes according to early conditions. This is important for <em>developmental biology</em>. Of course, computational cellular systems are far, far simpler than biological cells; but still draw from this inpsiration. The CA model was propsed by Stanislaw Ulam and used by von Neumann to demonstrate machines that can reproduce themselves; a more concise example being proposed by <a href="http://www.youtube.com/watch?v=2iDc4C6vbcc">Christopher Langton</a> decades later, itself later <a href="http://www.youtube.com/watch?v=vbpoTZlNTiw&amp;NR=1&amp;feature=endscreen">improved upon using artificial evolutionary techniques</a>.</p>
 <p><a href="http://www.interciencia.es/PDF/WikipediaBooks/CellAutomata.pdf">The wikibooks on CA</a>.</p>
 <p>The essential components that define a cellular system:</p>
@@ -166,3 +201,12 @@
 <li><strong>Aesthetic qualities</strong> (33%). How interesting the appearances and behaviors are. Perhaps the system behaves differently for different initial conditions or variations in rules and parameters; spend some time finding good start conditions and include them as options in the program (e.g. triggered by pressing keys). Write down how to use them, and why you think they are interesting. If it doesn&#39;t work as expected or produce interesting results, then the evaluation here will be on how well you can articulate what you had hoped for, what aspects of that you think are missing, why you think they are missing, what you can suggest to resolve it, etc.</li>
 <li><strong>Novel contribution</strong> (33%). This means creating something that we haven&#39;t built together in class, perhaps even something that has never been made before. The key aspects here are the creative qualities of the idea. Your ideas for future extensions will be evaluated too.</li>
 </ul>
+</div>
+	
+	<div class="footer">
+	<img src="img/snake6_small.jpg" alt="Artificial Natures"><br/>
+	Graham Wakefield, 2013</div>
+	
+</div>
+</body>
+</html>
